--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Xin chào!</h1>
-<p>Chào mừng các bạn đến với trang <a href="https://laptrinhjs.github.io">LaptrinhJS</a>.</p>
+<p style="text-align:center">Chào mừng các bạn đến với trang <a href="https://laptrinhjs.github.io">LaptrinhJS</a>.</p>
+<div style="text-align: center"><a href="#" target="_blank">Page.</a><br /><a href="#" target="_blank">Group.</a></div>
 </body>
 </html>
