--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <body>
 <h1>Xin chào!</h1>
 <p style="text-align:center">Chào mừng các bạn đến với trang <a href="https://laptrinhjs.github.io">LaptrinhJS</a>.</p>
-<div style="text-align: center"><a href="#" target="_blank">Page.</a><br /><a href="#" target="_blank">Group.</a></div>
+<div style="text-align: center">
+  <a href="https://www.facebook.com/L%E1%BA%ADp-Tr%C3%ACnh-JavaScript-419883598586981/" target="_blank">Page.</a>
+  <br />
+  <a href="https://www.facebook.com/groups/laptrinhjs/" target="_blank">Group.</a>
+</div>
 </body>
 </html>
