--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1 style="text-align:center">Chào mừng các bạn đến với trang <a href="https://laptrinhjs.github.io">LaptrinhJS</a>.</h1>
 <div style="text-align: center">
-  <a href="https://www.facebook.com/L%E1%BA%ADp-Tr%C3%ACnh-JavaScript-419883598586981/" target="_blank" style="color: gray">Page.</a>
+  <a href="https://www.facebook.com/L%E1%BA%ADp-Tr%C3%ACnh-JavaScript-419883598586981/" target="_blank" style="color: gray; text-decoration: none;">Page.</a>
   <br />
   <a href="https://www.facebook.com/groups/laptrinhjs/" target="_blank">Group.</a>
 </div>
