--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+  <script>
+    function myFunction()
+    {
+      var x = document.lastModified.split(" ")[0].split("/");
+      var y = x[1] + '/' + x[0] + '/' + x[2] + '/';
+      /*document.getElementById("demo").innerHTML = "Page last modified: " + y;*/
+      document.getElementById("demo").innerHTML = "Page last modified: " + document.lastModified;
+    }
+  </script>
+</head>
+<body onload="myFunction()">
 <h1 style="text-align:center">Chào mừng các bạn đến với trang <a href="https://laptrinhjs.github.io">LaptrinhJS</a>.</h1>
 <div style="text-align: center">
   <a href="https://www.facebook.com/L%E1%BA%ADp-Tr%C3%ACnh-JavaScript-419883598586981/" target="_blank" style="color: gray; text-decoration: none;">Page.</a>
   <br />
   <a href="https://www.facebook.com/groups/laptrinhjs/" target="_blank">Group.</a>
 </div>
+  <div style="text-align: right; font-size: 18px; font-family: Arial">
+    <u>
+      <p id="demo"></p>
+    </u>
+  </div>
 </body>
 </html>
