--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       var x = document.lastModified.split(" ")[0].split("/");
       var y = x[1] + '/' + x[0] + '/' + x[2] + '/';
       /*document.getElementById("demo").innerHTML = "Page last modified: " + y;*/
-      document.getElementById("demo").innerHTML = "Page last modified: " + document.lastModified;
+      document.getElementById("demo").innerHTML = "Trang được cập nhật vào lúc: " + document.lastModified;
     }
   </script>
 </head>
