--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body onload="myFunction()">
 <h1 style="text-align:center">Chào mừng các bạn đến với trang <a href="https://laptrinhjs.github.io">LaptrinhJS</a>.</h1>
 <div style="text-align: center">
-  <a href="https://www.facebook.com/L%E1%BA%ADp-Tr%C3%ACnh-JavaScript-419883598586981/" target="_blank" style="color: gray; text-decoration: none;">Page.</a>
+  <a style="color: gray; text-decoration: none;" href="https://www.facebook.com/L%E1%BA%ADp-Tr%C3%ACnh-JavaScript-419883598586981/" target="_blank">Page.</a>
   <br />
-  <a href="https://www.facebook.com/groups/laptrinhjs/" target="_blank">Group.</a>
+  <a style="font-size: 30px" href="https://www.facebook.com/groups/laptrinhjs/" target="_blank">Group.</a>
 </div>
   <div style="text-align: right; font-size: 18px; font-family: Arial">
     <u>
