--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div style="text-align: center">
   <a style="color: gray; text-decoration: none;" href="https://www.facebook.com/L%E1%BA%ADp-Tr%C3%ACnh-JavaScript-419883598586981/" target="_blank">Page.</a>
   <br />
-  <a style="font-size: 30px" href="https://www.facebook.com/groups/laptrinhjs/" target="_blank">Group.</a>
+  <a style="font-size: 30px; text-decoration: none" href="https://www.facebook.com/groups/laptrinhjs/" target="_blank">Group.</a>
 </div>
   <div style="text-align: right; font-size: 18px; font-family: Arial">
     <u>
