--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body onload="ljsFunction()">
 <h1 style="text-align:center">Chào mừng các bạn đến với trang <a href="https://laptrinhjs.github.io">LaptrinhJS</a>.</h1>
+<article></article>
 <div style="text-align: center">
   <a style="font-size: 16px; color: gray; text-decoration: none" href="https://www.facebook.com/L%E1%BA%ADp-Tr%C3%ACnh-JavaScript-419883598586981/" target="_blank">Page.</a>
   <br />
@@ -23,5 +24,6 @@
       <p id="ljsmod"></p>
     </u>
   </div>
+  <footer></footer>
 </body>
 </html>
