--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       var x = document.lastModified.split(" ")[0].split("/");
       var y = x[1] + '/' + x[0] + '/' + x[2] + ' ';
       var z = document.lastModified.split(" ")[1];
-      document.getElementById("ljsmod").innerHTML = "Trang đã được truy cập và chỉnh sửa vào lúc: " + y + z +'.';
+      document.getElementById("ljsmod").innerHTML = "Trang đã được truy cập và chỉnh sửa vào ngày: " + y + z +'.';
     }
   </script>
 </head>
