--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
   <a style="font-size: 50px; text-decoration: none" href="https://www.facebook.com/groups/laptrinhjs/" target="_blank">Group.</a>
 </div>
   <div style="text-align: right; font-size: 18px; font-family: Arial">
+    <a style="font-size: 16px; color: gray; text-decoration: none" href="https://github.com/laptrinhjs/laptrinhjs.github.io/" target="_blank">github.com</a>
+  <br />
     <u>
-      <p id="ljsmod"></p>
+      <p id="ljsmod"></p>      
     </u>
   </div>
   <footer></footer>
